# rfetch

./: .gitignore  Cargo.toml  README.md
src/: flags.rs  helpers.rs  main.rs
