[package]
name = "rfetch"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
tokio = { version = "1.48.0", features = ["macros"]}
reqwest = "0"
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = "4.2.3"